--- a/gagaga.html
+++ b/gagaga.html
@@ -255,13 +255,12 @@
     });
 
     const categories = [
-      "Native American Literature", "Realism", "Modernism", "Naturalism", "Romanticism",
-      "Declaration of Independence", "Savages", "Transcendentalism", "Slave Narrative",
-      "Colonial Period", "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano",
-      "Melting Pot and Salad Bowl", "Self Reliance", "The Cask of Amontillado", "Writing Style",
-      "Local Color", "The Black Minister's Veil", "Afro American Voices", "Enlightenment",
-      "What We Talk About...", "Richard Wright", "Langston Hughes", "American Authors",
-      "Intellectual Diary", "Random Question 80pts", "Ask a question 30pts"
+     "Native American Literature", "Realism", "Modernism", "Naturalism", "Romanticism",
+      "Declaration of Independence", "Savages", "Transcendentalism", "Slave Narrative", "Colonial Period",
+      "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl",
+      "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Black Minister's Veil", "Afro American Voices in Modern Era",
+      "Enlightenment", "What We Talk About When We Talk about Love", "Richard Wright", "Langston Hughes",
+      "American Literature in General", "American Authors", "Present your Intellectual Diary in 3 minutes","Random Question with 80pts", "Ask a question 30pts"
     ];
 
     const colors = [
