--- a/gagaga.html
+++ b/gagaga.html
@@ -144,8 +144,9 @@
     <div id="leftColumn">
       <h4>Instructions</h4>
       <ol>
+        <li>Our assessment is conducted under strict some rules.</li>
         <li>Once you click the <strong>Randomize</strong> button, 9 categories will appear on the screen.</li>
-        <li>The button may be used up to five times. Each participant is allowed to click it once.</li>
+        <li>The button may be used up to five times. Each participant must click the button once.</li>
         <li>You may select one category and will be asked up to three questions based on your choice.</li>
         <li>If you feel your responses are not quite satisfying, you may select one additional category — without clicking the button again.</li>
       </ol>
@@ -260,7 +261,7 @@
       "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl",
       "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Black Minister's Veil", "Afro American Voices in Modern Era",
       "Enlightenment", "What We Talk About When We Talk about Love", "Richard Wright", "Langston Hughes",
-      "American Literature in General", "American Authors", "Present your Intellectual Diary in 3 minutes","Random Question with 80pts", "Ask a question 30pts"
+      "American Literature in General", "American Authors", "Present your Intellectual Diary in 2 minutes","Random Question with 80pts", "Ask a question 30pts"
     ];
 
     const colors = [
