--- a/212121212121212121212121212.html
+++ b/212121212121212121212121212.html
@@ -274,9 +274,9 @@
 
     const categories = [
      "Native American Literature", "Realism", "Modernism", "Naturalism", "Romanticism",
-      "Declaration of Independence", "Savages", "Transcendentalism", "Slave Narrative", "Colonial Period",
-      "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl",
-      "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Black Minister's Veil", "Afro American Voices in Modern Era",
+      "Declaration of Independence", "The Beginning of Summer and Winter", "Transcendentalism", "Slave Narrative", "Colonial Period",
+      "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl", "American Values",
+      "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Minister's Black Veil", "Afro American Voices in Modern Era",
       "Enlightenment", "What We Talk About When We Talk about Love", "Richard Wright", "Langston Hughes",
       "American Literature in General", "American Authors", "Present your Intellectual Diary in 2 minutes","Random Question with 80pts", "Ask a question 30pts"
     ];
