--- a/313131313131313131313131331anglo.html
+++ b/313131313131313131313131331anglo.html
@@ -173,10 +173,10 @@
     <div id="rightColumn"></div>
   </div>
 
-  <audio id="niceTry" src="https://yogaptek.github.io/suara/nicetry.m4a" preload="auto"></audio>
+  <audio id="niceTry" src="https://yogaptek.github.io/suara/nicetry.mp3" preload="auto"></audio>
   <audio id="notBad" src="https://assets.mixkit.co/sfx/download/mixkit-game-notification-wave-2314.mp3" preload="auto"></audio>
-  <audio id="goodJob" src="https://yogaptek.github.io/suara/goodjob.m4a" preload="auto"></audio>
-  <audio id="applause" src="https://yogaptek.github.io/suara/perfect.m4a" preload="auto"></audio>
+  <audio id="goodJob" src="https://yogaptek.github.io/suara/goodjob.mp3" preload="auto"></audio>
+  <audio id="applause" src="https://yogaptek.github.io/suara/perfect.mp3" preload="auto"></audio>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
