--- a/313131313131313131313131331anglo.html
+++ b/313131313131313131313131331anglo.html
@@ -315,6 +315,15 @@
     audio.pause();
     audio.currentTime = 0;
   });
+      // Minta full screen
+  const elem = document.documentElement;
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.webkitRequestFullscreen) { // Safari
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { // IE11
+    elem.msRequestFullscreen();
+  }
 }
   </script>
 </body>
