--- a/212121212121212121212121212.html
+++ b/212121212121212121212121212.html
@@ -177,7 +177,7 @@
   <audio id="notBad" src="https://assets.mixkit.co/sfx/download/mixkit-game-notification-wave-2314.mp3" preload="auto"></audio>
   <audio id="goodJob" src="https://yogaptek.github.io/suara/goodjob.mp3" preload="auto"></audio>
   <audio id="applause" src="https://yogaptek.github.io/suara/perfect.mp3" preload="auto"></audio>
-  <audio id="shuffleSound" src="https://assets.mixkit.co/sfx/download/waterdrop.mp3" preload="auto"></audio>
+  <audio id="shuffleSound" src="https://yogaptek.github.io/suara/waterdrop.mp3" preload="auto"></audio>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
