--- a/313131313131313131313131331anglo.html
+++ b/313131313131313131313131331anglo.html
@@ -276,8 +276,8 @@
     });
 
     const categories = [
-     "Oceania Literature", "African Literature", "Khalil Gibran", "Anglophonic Authors", "Anglophonic Literature",
-      "Post-Colonial Topics", "Crisis Identity", "Slavery", "Political Issue", "Ask a Question for 30pts",
+     "Oceania Literature", "African Literature", "The Prophet", "Anglophonic Authors", "Anglophonic Literature",
+      "Post-Colonial Topics", "Identity Crisis", "Pidgin and Creole", "Political Issue", "Ask a Question for 30pts",
       "Random Question for 80pts", "The Will of Allah", "A Civil Peace", "Local Color", "Gender Issue", "An Astrologer's Day",
       "West and East Concept", "Writing Style", "Present your Intellectual Diary in 2 minutes","Female Fiction", "Stream of Consciousness", "Colonial Legacies"
     ];
