--- a/41414141414141414141414141novel.html
+++ b/41414141414141414141414141novel.html
@@ -161,12 +161,13 @@
     <div id="leftColumn">
       <h4>Instructions</h4>
       <ol>
-        <li>Our assessment is conducted under strict some rules.</li>
-        <li>Once you click the <strong>Randomize</strong> button, 9 categories will appear on the screen.</li>
-        <li>The button may be used up to five times. Each participant must click the button once.</li>
-        <li>You may select one category and will be asked up to three questions based on your choice.</li>
-        <li>If you feel your responses are not quite satisfying, you may select one additional category — without clicking the button again.</li>
-      </ol>
+  <li><em>Prepare the novel you have selected.</em></li>
+  <li>Once you click the <strong>Randomize</strong> button, <strong>9 categories</strong> will appear on the screen.</li>
+  <li>The button may be used <strong>up to five times</strong>, each participant is allowed to click it <strong>once</strong>.</li>
+  <li>You may select <strong>one category</strong> and will be asked <strong>up to three data analysis</strong> related to your chosen novel.</li>
+  <li>If you feel your responses are not quite satisfying, you may select <strong>one additional category</strong> — without clicking the button again.</li>
+  <li>If several participants select the same category with the same novel, it is strongly recommended to prepare alternative insights to make your responses more distinctive.</li>
+</ol>
       <button id="shuffleBtn" class="btn btn-primary">Randomize Category</button>
     </div>
 
@@ -277,8 +278,8 @@
     const categories = [
      "Climax", "Voice of Narrator", "Tone and Mood", "Setting", "Character and Characterization",
       "Three Act of Structure", "Resolution", "Theme", "Personal Review", "Random Questions for 80pts",
-      "Symbol and Allegory", "Irony", "Writing Style", "Fabula and Syuzhet", "Plot", "Gothic Literature",
-      "Absurdism", "Modernism","Romanticism", "Present your Intellectual Diary in 3 minutes", "Social Context"
+      "Symbol and Allegory", "Irony", "Writing Style", "Fabula and Syuzhet", "Plot", "Gothic Element", "narrative structure",
+      "Absurdism", "Modernism","Romanticism", "Present your Intellectual Diary in 2 minutes", "internal conflict","external conflict", "Social Context"
     ];
 
     const colors = [
