--- a/41414141414141414141414141novel.html
+++ b/41414141414141414141414141novel.html
@@ -276,7 +276,7 @@
     });
 
     const categories = [
-     "Climax", "Voice of Narrator", "Tone and Mood", "Setting", "Character and Characterization",
+     "Climax", "Voice of Narrator", "Tone and Mood", "Setting", "Character and Characterization","Modern Element",
       "Three Act of Structure", "Resolution", "Theme", "Personal Review", "Random Questions for 80pts",
       "Symbol and Allegory", "Irony", "Writing Style", "Fabula and Syuzhet", "Plot", "Gothic Element", "narrative structure",
       "Absurdism", "Modernism","Romanticism", "Present your Intellectual Diary in 2 minutes", "internal conflict","external conflict", "Social Context"
