--- a/212121212121212121212121212.html
+++ b/212121212121212121212121212.html
@@ -275,7 +275,7 @@
     });
 
     const categories = [
-     "Anne Bradstreet", "Realism", "Modernism", "Naturalism", "Romanticism", "American Values", "Belali Muhammad", "Poor Richard Almanac",
+     "Anne Bradstreet", "Realism", "Modernism", "City Upon a Hill", "Naturalism", "Romanticism", "American Values", "Belali Muhammad", "Poor Richard Almanac",
       "Declaration of Independence", "The Beginning of Summer and Winter", "Transcendentalism", "Slave Narrative", "Colonial Period",
       "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl", "American Values", "Stephen Crane",
       "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Minister's Black Veil", "Afro American Voices in Modern Era",
