Refactor HTML and JavaScript for FPS scene

--- a/fps.html
+++ b/fps.html
@@ -1,87 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Sketsa 3D FPS</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-  </style>
+  <meta charset="utf-8">
+  <title>Skets</title>
+  <style>body { margin:0; }</style>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/controls/PointerLockControls.js"></script>
   <script>
-    // === Setup Scene, Camera, Renderer ===
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    // === Lantai ===
-    const floorGeometry = new THREE.PlaneGeometry(100, 100);
-    const floorMaterial = new THREE.MeshBasicMaterial({ color: 0x888888 });
-    const floor = new THREE.Mesh(floorGeometry, floorMaterial);
-    floor.rotation.x = -Math.PI / 2;
+    // Lantai
+    const floorGeo = new THREE.PlaneGeometry(100,100);
+    const floorMat = new THREE.MeshBasicMaterial({color:0x888888});
+    const floor = new THREE.Mesh(floorGeo,floorMat);
+    floor.rotation.x = -Math.PI/2;
     scene.add(floor);
 
-    // === Dinding Batu (Contoh posisi manual) ===
-    function addWall(x, y, z, w, h, d) {
-      const geo = new THREE.BoxGeometry(w, h, d);
-      const mat = new THREE.MeshBasicMaterial({ color: 0x333333 });
-      const wall = new THREE.Mesh(geo, mat);
-      wall.position.set(x, y, z);
+    // Dinding batu
+    function addWall(x,y,z,w,h,d){
+      const geo = new THREE.BoxGeometry(w,h,d);
+      const mat = new THREE.MeshBasicMaterial({color:0x333333});
+      const wall = new THREE.Mesh(geo,mat);
+      wall.position.set(x,y,z);
       scene.add(wall);
     }
+    addWall(0,2.5,-20,40,5,1); // contoh dinding
 
-    // Tambahkan beberapa dinding sesuai sketsa
-    addWall(0, 2.5, -20, 40, 5, 1); // dinding horizontal
-    addWall(-20, 2.5, -10, 1, 5, 20); // dinding vertikal kiri
-    addWall(20, 2.5, -10, 1, 5, 20); // dinding vertikal kanan
-    addWall(0, 2.5, 0, 40, 5, 1); // dinding horizontal depan
-
-    // === Pohon (Contoh posisi manual) ===
-    function addTree(x, z) {
-      const trunkGeo = new THREE.CylinderGeometry(0.5, 0.5, 2, 8);
-      const trunkMat = new THREE.MeshBasicMaterial({ color: 0x8B4513 });
-      const trunk = new THREE.Mesh(trunkGeo, trunkMat);
-      trunk.position.set(x, 1, z);
+    // Pohon
+    function addTree(x,z){
+      const trunkGeo = new THREE.CylinderGeometry(0.5,0.5,2,8);
+      const trunkMat = new THREE.MeshBasicMaterial({color:0x8B4513});
+      const trunk = new THREE.Mesh(trunkGeo,trunkMat);
+      trunk.position.set(x,1,z);
       scene.add(trunk);
 
-      const leafGeo = new THREE.SphereGeometry(1.5, 8, 8);
-      const leafMat = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-      const leaf = new THREE.Mesh(leafGeo, leafMat);
-      leaf.position.set(x, 3, z);
+      const leafGeo = new THREE.SphereGeometry(1.5,8,8);
+      const leafMat = new THREE.MeshBasicMaterial({color:0x00ff00});
+      const leaf = new THREE.Mesh(leafGeo,leafMat);
+      leaf.position.set(x,3,z);
       scene.add(leaf);
     }
+    addTree(-10,-10);
+    addTree(10,-10);
 
-    addTree(-10, -10); // pohon 1
-    addTree(10, -10);  // pohon 2
+    // Kamera
+    camera.position.set(0,2,5);
 
-    // === Kamera & Kontrol FPS ===
+    // Kontrol FPS
     const controls = new THREE.PointerLockControls(camera, document.body);
-    document.body.addEventListener('click', () => controls.lock());
-    camera.position.set(0, 1.6, 10);
+    document.body.addEventListener('click',()=>controls.lock());
 
-    // === Gerakan WASD ===
-    const keys = {};
-    document.addEventListener('keydown', e => keys[e.code] = true);
-    document.addEventListener('keyup', e => keys[e.code] = false);
-
-    function movePlayer() {
-      const speed = 0.1;
-      if (keys['KeyW']) controls.moveForward(speed);
-      if (keys['KeyS']) controls.moveForward(-speed);
-      if (keys['KeyA']) controls.moveRight(-speed);
-      if (keys['KeyD']) controls.moveRight(speed);
+    // WASD
+    const keys={};
+    document.addEventListener('keydown',e=>keys[e.code]=true);
+    document.addEventListener('keyup',e=>keys[e.code]=false);
+    function movePlayer(){
+      const speed=0.1;
+      if(keys['KeyW'])controls.moveForward(speed);
+      if(keys['KeyS'])controls.moveForward(-speed);
+      if(keys['KeyA'])controls.moveRight(-speed);
+      if(keys['KeyD'])controls.moveRight(speed);
     }
 
-    // === Animasi ===
-    function animate() {
+    // Animasi
+    function animate(){
       requestAnimationFrame(animate);
       movePlayer();
-      renderer.render(scene, camera);
+      renderer.render(scene,camera);
     }
     animate();
   </script>
