Refactor fps.html for module imports and structure

--- a/fps.html
+++ b/fps.html
@@ -1,80 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Skets</title>
-  <style>body { margin:0; }</style>
+  <meta charset="UTF-8">
+  <title>Sketsa 3D FPS</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/controls/PointerLockControls.js"></script>
-  <script>
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+<script type="module">
+  import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
+  import { PointerLockControls } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/controls/PointerLockControls.js';
 
-    // Lantai
-    const floorGeo = new THREE.PlaneGeometry(100,100);
-    const floorMat = new THREE.MeshBasicMaterial({color:0x888888});
-    const floor = new THREE.Mesh(floorGeo,floorMat);
-    floor.rotation.x = -Math.PI/2;
-    scene.add(floor);
+  // === Setup Scene, Camera, Renderer ===
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+  const renderer = new THREE.WebGLRenderer();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
 
-    // Dinding batu
-    function addWall(x,y,z,w,h,d){
-      const geo = new THREE.BoxGeometry(w,h,d);
-      const mat = new THREE.MeshBasicMaterial({color:0x333333});
-      const wall = new THREE.Mesh(geo,mat);
-      wall.position.set(x,y,z);
-      scene.add(wall);
-    }
-    addWall(0,2.5,-20,40,5,1); // contoh dinding
+  // === Lantai ===
+  const floorGeo = new THREE.PlaneGeometry(100,100);
+  const floorMat = new THREE.MeshBasicMaterial({color:0x888888});
+  const floor = new THREE.Mesh(floorGeo,floorMat);
+  floor.rotation.x = -Math.PI/2;
+  scene.add(floor);
 
-    // Pohon
-    function addTree(x,z){
-      const trunkGeo = new THREE.CylinderGeometry(0.5,0.5,2,8);
-      const trunkMat = new THREE.MeshBasicMaterial({color:0x8B4513});
-      const trunk = new THREE.Mesh(trunkGeo,trunkMat);
-      trunk.position.set(x,1,z);
-      scene.add(trunk);
+  // === Fungsi Dinding Batu ===
+  function addWall(x,y,z,w,h,d){
+    const geo = new THREE.BoxGeometry(w,h,d);
+    const mat = new THREE.MeshBasicMaterial({color:0x333333});
+    const wall = new THREE.Mesh(geo,mat);
+    wall.position.set(x,y,z);
+    scene.add(wall);
+  }
+  // Contoh dinding sesuai sketsa
+  addWall(0,2.5,-20,40,5,1);
+  addWall(-20,2.5,-10,1,5,20);
+  addWall(20,2.5,-10,1,5,20);
+  addWall(0,2.5,0,40,5,1);
 
-      const leafGeo = new THREE.SphereGeometry(1.5,8,8);
-      const leafMat = new THREE.MeshBasicMaterial({color:0x00ff00});
-      const leaf = new THREE.Mesh(leafGeo,leafMat);
-      leaf.position.set(x,3,z);
-      scene.add(leaf);
-    }
-    addTree(-10,-10);
-    addTree(10,-10);
+  // === Fungsi Pohon ===
+  function addTree(x,z){
+    const trunkGeo = new THREE.CylinderGeometry(0.5,0.5,2,8);
+    const trunkMat = new THREE.MeshBasicMaterial({color:0x8B4513});
+    const trunk = new THREE.Mesh(trunkGeo,trunkMat);
+    trunk.position.set(x,1,z);
+    scene.add(trunk);
 
-    // Kamera
-    camera.position.set(0,2,5);
+    const leafGeo = new THREE.SphereGeometry(1.5,8,8);
+    const leafMat = new THREE.MeshBasicMaterial({color:0x00ff00});
+    const leaf = new THREE.Mesh(leafGeo,leafMat);
+    leaf.position.set(x,3,z);
+    scene.add(leaf);
+  }
+  addTree(-10,-10);
+  addTree(10,-10);
 
-    // Kontrol FPS
-    const controls = new THREE.PointerLockControls(camera, document.body);
-    document.body.addEventListener('click',()=>controls.lock());
+  // === Kamera & Kontrol FPS ===
+  const controls = new PointerLockControls(camera, document.body);
+  document.body.addEventListener('click', () => controls.lock());
+  camera.position.set(0,1.6,10);
 
-    // WASD
-    const keys={};
-    document.addEventListener('keydown',e=>keys[e.code]=true);
-    document.addEventListener('keyup',e=>keys[e.code]=false);
-    function movePlayer(){
-      const speed=0.1;
-      if(keys['KeyW'])controls.moveForward(speed);
-      if(keys['KeyS'])controls.moveForward(-speed);
-      if(keys['KeyA'])controls.moveRight(-speed);
-      if(keys['KeyD'])controls.moveRight(speed);
-    }
+  // === Gerakan WASD ===
+  const keys={};
+  document.addEventListener('keydown',e=>keys[e.code]=true);
+  document.addEventListener('keyup',e=>keys[e.code]=false);
+  function movePlayer(){
+    const speed=0.1;
+    if(keys['KeyW'])controls.moveForward(speed);
+    if(keys['KeyS'])controls.moveForward(-speed);
+    if(keys['KeyA'])controls.moveRight(-speed);
+    if(keys['KeyD'])controls.moveRight(speed);
+  }
 
-    // Animasi
-    function animate(){
-      requestAnimationFrame(animate);
-      movePlayer();
-      renderer.render(scene,camera);
-    }
-    animate();
-  </script>
+  // === Animasi ===
+  function animate(){
+    requestAnimationFrame(animate);
+    movePlayer();
+    renderer.render(scene,camera);
+  }
+  animate();
+</script>
 </body>
 </html>
